--- a/web/edit.html
+++ b/web/edit.html
@@ -36,7 +36,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li>
-                        <a href="/web/">Home</a>
+                            <a href="/web/">Home</a>
                         </li>
                         <li class="active">
                             <a href="edit.html">Light Schedule</a>
@@ -83,7 +83,7 @@
 </body>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
@@ -93,6 +93,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="/web/js/bootstrap-switch.js"></script>
 <script src="/web/js/jsonedit.js"></script>
+<script src="/web/js/handlebars-v4.0.10.js"></script>
 <script src="/web/js/whet.js"></script>
 <script src="/web/js/whet.edit.js"></script>
 
