--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
+
 
 </head>
 
@@ -15,53 +16,15 @@
         <div class="jumbotron">
             <h1 class="display-3">Whet</h1>
             <hr class="my-4">
-            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status: <span id="status">disconnected</span>
+            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status:
+            <span id="status">disconnected</span>
             <p id="time"> </p>
             </hr>
         </div>
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Whet</a>
-              </div>
-              <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="edit.html">Light Schedule</a></li>
-                  <li><a href="#">Settings</a></li>
-                  <li><a href="preview.html">Preview</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-                  <li><a href="../navbar-static-top/">Static top</a></li>
-                  <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-                </ul>
-              </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-          </nav>
+        <nav class="navbar navbar-default"> </nav>
 
-        <div id="channel-statuses">
-            <div id="99" class="row invisible">
-                <div class="channel-id col-1">dummy</div>
-                <div class="pwm-value col-3">
-                    <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
-                </div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                            <span class="progress-text">100%</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="channel-statuses"> </div>
 
         <div id="light-schedule">
             <h3> Schedule </h3>
@@ -82,58 +45,60 @@
         <div class="form-group">
             <h3>Log</h3>
             <div id="log" style="height: 20em; overflow:auto; border: 1px solid black"></div>
-            </div>
-            <form id="chatform">
-                <input id="text" type="text" class="form-control" />
-                <input type="submit" class="form-control" />
-            </form>
         </div>
+        <form id="chatform">
+            <input id="text" type="text" class="form-control" />
+            <input type="submit" class="form-control" />
+        </form>
+    </div>
 
-        <div id="protocols" class="invisible">
-            <ul class="list-group">
-                <li class="list-group-item">
-                    <input id="websocket" type="checkbox" value="websocket" checked="checked"></input>
-                    <label for="websocket">websocket</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="xhr-streaming" type="checkbox" value="xhr-streaming" checked="checked"></input>
-                    <label for="xhr-streaming">xhr-streaming</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="iframe-eventsource" type="checkbox" value="iframe-eventsource" checked="checked"></input>
-                    <label for="iframe-eventsource">iframe-eventsource</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="iframe-htmlfile" type="checkbox" value="iframe-htmlfile" checked="checked"></input>
-                    <label for="iframe-htmlfile">iframe-htmlfile</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="xhr-polling" type="checkbox" value="xhr-polling" checked="checked"></input>
-                    <label for="xhr-polling">xhr-polling</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="iframe-xhr-polling" type="checkbox" value="iframe-xhr-polling" checked="checked"></input>
-                    <label for="iframe-xhr-polling">iframe-xhr-polling</label>
-                </li>
-                <li class="list-group-item">
-                    <input id="jsonp-polling" type="checkbox" value="jsonp-polling" checked="checked"></input>
-                    <label for="jsonp-polling">jsonp-polling</label>
-                </li>
-            </ul>
-        </div>
+    <div id="protocols" class="invisible">
+        <ul class="list-group">
+            <li class="list-group-item">
+                <input id="websocket" type="checkbox" value="websocket" checked="checked"></input>
+                <label for="websocket">websocket</label>
+            </li>
+            <li class="list-group-item">
+                <input id="xhr-streaming" type="checkbox" value="xhr-streaming" checked="checked"></input>
+                <label for="xhr-streaming">xhr-streaming</label>
+            </li>
+            <li class="list-group-item">
+                <input id="iframe-eventsource" type="checkbox" value="iframe-eventsource" checked="checked"></input>
+                <label for="iframe-eventsource">iframe-eventsource</label>
+            </li>
+            <li class="list-group-item">
+                <input id="iframe-htmlfile" type="checkbox" value="iframe-htmlfile" checked="checked"></input>
+                <label for="iframe-htmlfile">iframe-htmlfile</label>
+            </li>
+            <li class="list-group-item">
+                <input id="xhr-polling" type="checkbox" value="xhr-polling" checked="checked"></input>
+                <label for="xhr-polling">xhr-polling</label>
+            </li>
+            <li class="list-group-item">
+                <input id="iframe-xhr-polling" type="checkbox" value="iframe-xhr-polling" checked="checked"></input>
+                <label for="iframe-xhr-polling">iframe-xhr-polling</label>
+            </li>
+            <li class="list-group-item">
+                <input id="jsonp-polling" type="checkbox" value="jsonp-polling" checked="checked"></input>
+                <label for="jsonp-polling">jsonp-polling</label>
+            </li>
+        </ul>
+    </div>
 
     </div>
 </body>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 <script src="http://cdn.jsdelivr.net/sockjs/0.3/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="/web/js/bootstrap-switch.js"></script>
+<script src="/web/js/handlebars-v4.0.10.js"></script>
 <script src="/web/js/jsonedit.js"></script>
 <script src="/web/js/whet.js"></script>
 
