--- a/web/preview.html
+++ b/web/preview.html
@@ -7,7 +7,6 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
     <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
-    <link href="/web/css/whet.css" rel="stylesheet">
 
 </head>
 
@@ -24,47 +23,51 @@
 
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Whet</a>
-              </div>
-              <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  <li><a href="/web/">Home</a></li>
-                  <li><a href="edit.html">Light Schedule</a></li>
-                  <li><a href="#">Settings</a></li>
-                  <li class="active"><a href="preview.html">Preview</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
-                  <li><a href="../navbar-static-top/">Static top</a></li>
-                  <li><a href="../navbar-fixed-top/">Fixed top</a></li>
-                </ul>
-              </div><!--/.nav-collapse -->
-            </div><!--/.container-fluid -->
-          </nav>
-
-        <div id="channel-statuses">
-            <div id="99" class="row invisible">
-                <div class="channel-id col-1">dummy</div>
-                <div class="pwm-value col-3">
-                    <p>text <span class="glyphicon glyphicon-arrow-up"></span></p>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                        aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Whet</a>
                 </div>
-                <div class="col-8">
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                            <span class="progress-text">100%</span>
-                        </div>
-                    </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="/web/">Home</a>
+                        </li>
+                        <li>
+                            <a href="edit.html">Light Schedule</a>
+                        </li>
+                        <li>
+                            <a href="#">Settings</a>
+                        </li>
+                        <li class="active">
+                            <a href="preview.html">Preview</a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active">
+                            <a href="./">Default
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="../navbar-static-top/">Static top</a>
+                        </li>
+                        <li>
+                            <a href="../navbar-fixed-top/">Fixed top</a>
+                        </li>
+                    </ul>
                 </div>
+                <!--/.nav-collapse -->
             </div>
-        </div>
+            <!--/.container-fluid -->
+        </nav>
 
+        <div id="channel-statuses"></div>
         <div id="editor_holder"> </div>
 
 
@@ -72,7 +75,7 @@
 </body>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
@@ -82,6 +85,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 <script src="/web/js/bootstrap-switch.js"></script>
 <script src="/web/js/jsonedit.js"></script>
+<script src="/web/js/handlebars-v4.0.10.js"></script>
 <script src="/web/js/whet.js"></script>
 <script src="/web/js/whet.preview.js"></script>
 
