--- a/web/edit.html
+++ b/web/edit.html
@@ -4,22 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
+    <link href="/web/css/whet.css" rel="stylesheet">
     <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
-
 </head>
 
-<body style="font-size:18px">
+<body>
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-3">Whet</h1>
-            <hr class="my-4">
-            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status:
-            <span id="status">disconnected</span>
-            <p id="time"> </p>
-            </hr>
-        </div>
+
+        <div id="top"> </div>
 
         <nav class="navbar navbar-default"></nav>
 
