--- a/web/index.html
+++ b/web/index.html
@@ -6,22 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/web/css/whet.css" rel="stylesheet">
     <link href="/web/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
-    
-
-
 </head>
 
-<body style="font-size:18px">
+<body>
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-3">Whet</h1>
-            <hr class="my-4">
-            <a id="connect" href="#">Connect</a>&nbsp;|&nbsp;Status:
-            <span id="status">disconnected</span>
-            <p id="time"> </p>
-
-            </hr>
-        </div>
+        <div id="top"> </div>
 
         <nav class="navbar navbar-default"> </nav>
 
