--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
         <div id="overview-statuses">
             <div id='temperature-status' class='col-xs-4'>00&#8457;</div> 
             <div id='weather-status' class='col-xs-4'>weather:normal</div>
-            <div id='fan-status' class-'col-xs-4'>fan speed: 55%</div>
+            <div id='fan-status' class-'col-xs-4'></div>
         </div>
 
         <div id="channel-statuses"> </div>
